# VirtualAwesome

./: .gitignore  CMakeLists.txt  README.textile  README.txt  premake4.lua
addons/vaMice/: CMakeLists.txt
addons/vaMice/include/vaMice/: Mice.h
addons/vaMice/src/: Mice.cpp
addons/vaMultipad/: CMakeLists.txt
addons/vaMultipad/include/vaMultipad/: GamepadWidget.h  Multipad.h
addons/vaMultipad/src/: GamepadWidget.cpp  Multipad.cpp
addons/vaNetwork/: CMakeLists.txt
addons/vaNetwork/include/vaNetwork/: AwesomeSocket.h  Config.h  EndPoint.h  Err.h  EventHandlers.h  Ftp.h  Http.h  IpAddress.h  Main.h  Network.h  NonCopyable.h  Packet.h  Socket.h  SocketHandle.h  SocketImpl.h  SocketImplUnix.h  SocketImplWin32.h  SocketSelector.h  String.h  TCPClient.h  TCPManager.h  TCPServer.h  TcpListener.h  TcpSocket.h  UDPManager.h  UdpSocket.h  Utf.h
addons/vaNetwork/src/: AwesomeSocket.cpp  EndPoint.cpp  Err.cpp  Ftp.cpp  Http.cpp  IpAddress.cpp  Packet.cpp  Socket.cpp  SocketImplUnix.cpp  SocketImplWin32.cpp  SocketSelector.cpp  String.cpp  TCPClient.cpp  TCPManager.cpp  TCPServer.cpp  TcpListener.cpp  TcpSocket.cpp  UDPManager.cpp  UdpSocket.cpp  Utf.cpp
addons/vaOpenal/: CMakeLists.txt
addons/vaOpenal/include/vaOpenal/: AudioDevice.h  AudioResource.h  Listener.h  Music.h  OpenAL.h  Resource.h  Sound.h  SoundBuffer.h  SoundFile.h  SoundFileDefault.h  SoundFileOgg.h  SoundPlayer.h  SoundStereo.h  SoundStream.h  Types.h
addons/vaOpenal/src/: AudioDevice.cpp  AudioResource.cpp  Listener.cpp  Music.cpp  Sound.cpp  SoundBuffer.cpp  SoundFile.cpp  SoundFileDefault.cpp  SoundFileOgg.cpp  SoundPlayer.cpp  SoundStereo.cpp  SoundStream.cpp  stb_vorbis.c
addons/vaOpencv/: CMakeLists.txt
addons/vaOpencv/include/vaOpencv/: Image.h
addons/vaOpencv/src/: Image.cpp
addons/vaOsc/: CMakeLists.txt
addons/vaOsc/include/vaOsc/: Arg.h  Bundle.h  EventHandlers.h  Message.h  Receiver.h  Sender.h
addons/vaOsc/libs/oscpack/include/oscpack/: IpEndpointName.h  NetworkingUtils.h  OscHostEndianness.h  PacketListener.h  TimerListener.h  UdpSocket.h
addons/vaOsc/libs/oscpack/src/: IpEndpointName.cpp  OscOutboundPacketStream.cpp  OscPrintReceivedElements.cpp  OscReceivedElements.cpp  OscTypes.cpp  PosixNetworkingUtils.cpp  PosixUdpSocket.cpp  WinNetworkingUtils.cpp  WinUdpSocket.cpp
addons/vaOsc/src/: Bundle.cpp  Message.cpp  Receiver.cpp  Sender.cpp
addons/vaSound/: CMakeLists.txt
addons/vaSound/include/vaSound/: EventHandlers.h  Sound.h
addons/vaSound/libs/stk/include/stk/: ADSR.h  Asymp.h  BandedWG.h  BeeThree.h  BiQuad.h  Blit.h  BlitSaw.h  BlitSquare.h  BlowBotl.h  BlowHole.h  BowTable.h  Bowed.h  Brass.h  Chorus.h  Clarinet.h  Delay.h  DelayA.h  DelayL.h  Drummer.h  Echo.h  Effect.h  Envelope.h  FM.h  FMVoices.h  FileLoop.h  FileRead.h  FileWrite.h  FileWvIn.h  FileWvOut.h  Filter.h  Fir.h  Flute.h  FormSwep.h  Function.h  Generator.h  Granulate.h  HevyMetl.h  Iir.h  InetWvIn.h  InetWvOut.h  (+58 more)
addons/vaSound/libs/stk/src/: ADSR.cpp  Asymp.cpp  BandedWG.cpp  BeeThree.cpp  BiQuad.cpp  Blit.cpp  BlitSaw.cpp  BlitSquare.cpp  BlowBotl.cpp  BlowHole.cpp  Bowed.cpp  Brass.cpp  Chorus.cpp  Clarinet.cpp  Delay.cpp  DelayA.cpp  DelayL.cpp  Drummer.cpp  Echo.cpp  Envelope.cpp  FM.cpp  FMVoices.cpp  FileLoop.cpp  FileRead.cpp  FileWrite.cpp  FileWvIn.cpp  FileWvOut.cpp  Fir.cpp  Flute.cpp  FormSwep.cpp  Granulate.cpp  HevyMetl.cpp  Iir.cpp  InetWvIn.cpp  InetWvOut.cpp  JCRev.cpp  Mandolin.cpp  Mesh2D.cpp  Messager.cpp  MidiFileIn.cpp  (+46 more)
addons/vaSound/src/: Sound.cpp
addons/vaTouchkit/: CMakeLists.txt
addons/vaTouchkit/include/vaTouchkit/: AdaptiveFilter.h  Blob.h  BlobTracker.h  Contour.h  ContourFinder.h  JpegGrabber.h  Tracker.h  VideoGrabber.h  VideoGrabberDc1394.h  VideoGrabberFlyCapture.h  VisionMap.h
addons/vaTouchkit/src/: AdaptiveFilter.cpp  BlobTracker.cpp  ContourFinder.cpp  JpegGrabber.cpp  Tracker.cpp  VideoGrabberDc1394.cpp  VideoGrabberFlyCapture.cpp  VisionMap.cpp
addons/vaTween/: CMakeLists.txt
addons/vaTween/include/vaTween/: CppTweener.h
addons/vaTween/src/: CppTweener.cpp
apps/addonExamples/exampleGestureWidget/: CMakeLists.txt
apps/addonExamples/exampleMice/: CMakeLists.txt
apps/addonExamples/exampleMultipad/: CMakeLists.txt
apps/addonExamples/exampleMultipadGamepad/: CMakeLists.txt
apps/addonExamples/exampleMultipadGesture/: CMakeLists.txt
apps/addonExamples/exampleNetworkTcpClient/: CMakeLists.txt
apps/addonExamples/exampleNetworkTcpServer/: CMakeLists.txt
apps/addonExamples/exampleNetworkUdpReceiver/: CMakeLists.txt
apps/addonExamples/exampleNetworkUdpSender/: CMakeLists.txt
apps/addonExamples/exampleOpenal/: CMakeLists.txt
apps/addonExamples/exampleOscReceiver/: CMakeLists.txt
apps/addonExamples/exampleOscReceiver/src/: MyApp.cpp  MyApp.h
apps/addonExamples/exampleOscSender/: CMakeLists.txt
apps/addonExamples/exampleSoundInstrument/: CMakeLists.txt
apps/addonExamples/exampleSoundInstrument/src/: MyApp.cpp  MyApp.h
apps/addonExamples/exampleSoundSine/: CMakeLists.txt
apps/addonExamples/exampleTcpServer/: CMakeLists.txt
apps/addonExamples/exampleTouchkitSimple/: CMakeLists.txt
apps/addonExamples/exampleTouchkitSimple/src/: MyApp.cpp  MyApp.h  main.cpp
apps/addonExamples/exampleTween/: CMakeLists.txt
apps/examples/exampleKeymouse/: CMakeLists.txt
apps/examples/exampleShapes/: CMakeLists.txt
apps/examples/exampleWidget/: CMakeLists.txt
apps/myApps/gridderTest/: CMakeLists.txt
apps/myApps/lasersaurSimulator/: CMakeLists.txt
apps/myApps/storm/: CMakeLists.txt
apps/osgExamples/osgmovie/: CMakeLists.txt
apps/osgExamples/osgmovie/src/: main.cpp
apps/snowDrift/storm/: CMakeLists.txt
core/va/src/: App.cpp  CircleShape.cpp  EllipseShape.cpp  ImageShape.cpp  LineShape.cpp  MonsterShape.cpp  Node.cpp  Scene.cpp  SliderWidget.cpp  TextureGeometry.cpp  VertexGeometry.cpp  Visitors.cpp
data/: dome.stl  katana.3ds  sonar_mono.aiff
libs/va/src/: ButtonWidget.cpp  Constants.cpp  GestureWidget.cpp  GuiEvents.cpp  Model.cpp  Node.cpp  PanelWidget.cpp  RectangleShape.cpp  Scene.cpp  Slider2DWidget.cpp  TextShape.cpp  (+6 more)
(+96 files in other folders)
