
IF(APPLE)


SET( VA_MULTIPAD_ROOT  ${PROJECT_SOURCE_DIR}/addons/vaMultipad )

#set includes, also make available in parent scope
SET( VA_MULTIPAD_INCLUDES  ${VA_MULTIPAD_ROOT}/include )
SET( VA_MULTIPAD_INCLUDES  ${VA_MULTIPAD_ROOT}/include  PARENT_SCOPE )
INCLUDE_DIRECTORIES( ${VA_MULTIPAD_INCLUDES} )
	
ADD_LIBRARY( vaMultipad STATIC
	${VA_MULTIPAD_ROOT}/include/vaMultipad/Multipad.h
	${VA_MULTIPAD_ROOT}/include/vaMultipad/GamepadWidget.h
	${VA_MULTIPAD_ROOT}/src/Multipad.cpp
	${VA_MULTIPAD_ROOT}/src/GamepadWidget.cpp
)

# Find osx frameworks
FIND_LIBRARY( MULTITOUCH_FRAMEWORK
    NAMES MultitouchSupport
    PATHS /System/Library/PrivateFrameworks
)
MARK_AS_ADVANCED( MULTITOUCH_FRAMEWORK )
SET( VA_MULTIPAD_LINK_LIBRARIES  ${MULTITOUCH_FRAMEWORK} )					
SET( VA_MULTIPAD_LINK_LIBRARIES  ${MULTITOUCH_FRAMEWORK}  PARENT_SCOPE )					

TARGET_LINK_LIBRARIES( vaMultipad  
	va  ${VA_LINK_LIBRARIES}
	vaMultipad  ${VA_MULTIPAD_LINK_LIBRARIES}
)

SET_TARGET_PROPERTIES( vaMultipad PROPERTIES 
	ARCHIVE_OUTPUT_DIRECTORY  ${VA_MULTIPAD_ROOT}/bin
)


ENDIF(APPLE)
